# MailAssist

./: .env.example  .gitignore  AGENTS.md  CLAUDE_ARCH_CRITIQUE.md  CLAUDE_GUI_CRITIQUE.md  CLAUDE_MISC_CRITIQUE.md  ENVIRONMENT_SOP.md  FOOD_FOR_THOUGHTS_WEB_APP.md  NORTH_STAR.md  PICKUP_WHERE_LEFT_OFF_SOP.md  README.md  REALISM.md  RESEARCH.md  RESULTS.md  SHOW_ME_SOP.md  STRATEGY.md  SUMMARY.md  TODO.md  VERSION  VERSIONING_SOP.md  build_mailassist_app.sh  pyproject.toml
.github/workflows/: pages.yml  test.yml
archived/2026-04-24-pre-background-bot/: RESEARCH.md  STRATEGY.md  TODO.md
archived/2026-05-02-claude-critiques-acknowledged/: 2026.04.30_Claude_Critique_2.md  CLAUDE_MISC_CRITIQUE.md  Claude.review.2026.05.02.08.md  FOOD_FOR_THOUGHTS_WEB_APP.md  (+1 more)
docs/: README.md  magali-outlook-call-checklist.md  magali-outlook.env.example  magali-pre-zoom-checklist.md  magali-windows-readiness-runbook.md  magali-zoom-operator-script.md  mailassist-outlook-entra-app-manifest.json  mailassist-outlook-entra-portal-steps.md  mailassist-outlook-graph-permissions.json  outlook-m365-admin-consent.md  windows-packaging.md
tests/: test_background_bot.py  test_bot_queue.py  test_bot_runtime.py  test_cli_main.py  test_config.py  test_contacts.py  test_desktop_layout.py  test_gmail_provider.py  test_live_filters.py  test_models.py  test_ollama_client.py  test_orchestrator.py  test_outlook_provider.py  test_provider_contract.py  test_review_state.py
tools/: create-outlook-entra-app.sh  magali-bootstrap.ps1  magali-readiness.ps1  prezoom-check.sh  verify-outlook-entra-app.sh
(+51 files in other folders)
